# whpc-kit

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: API_NAMING.md  API_NAMING_PROPOSAL.md  FP1_FP2_ALIGNMENT.md  GETTING_STARTED.md  PRODUCT_ROADMAP.md  README.md  RELEASE_CHECKLIST_v0.1.md  RELEASE_CHECKLIST_v1.0.md  REPRODUCIBILITY_NOTES.md  SCOPE.md
examples/: smoke_synthetic.py
reproducibility/: MANUSCRIPT_MATRIX.md  README.md  REPRODUCIBILITY_MATRIX.md  fp1_supervised_mm.manifest.json  fp1_supervised_mm.py  fp2_oneclass_adaptive.manifest.json  fp2_oneclass_adaptive.py  fp3_online_drift.manifest.json  fp3_online_drift.py  fp4_openworld_uncertainty.manifest.json  fp4_openworld_uncertainty.py  fp5_trustworthy.manifest.json  fp5_trustworthy.py
reproducibility/reference/: m2_published_reference.json
src/whpc/: __init__.py  classifier.py  datasets.py  drift_monitoring.py  explainability.py  feature_weights.py  multimodal_aggregation.py  multimodal_classifier.py  multimodal_partition.py  one_class_adaptive.py  one_class_multimodal.py  one_class_protocols.py  open_set.py  open_world.py  preprocessing.py  querying.py  representatives.py  robustness.py  scores.py  thresholds.py  weights.py
src/whpc/core/: __init__.py  representatives.py  scores.py  thresholds.py  weights.py
tests/: test_drift_monitoring.py  test_open_world.py  test_public_api_smoke.py  test_querying.py  test_reports.py  test_representatives.py  test_scores.py  test_selection.py  test_thresholds.py  test_weights.py
(+13 files in other folders)
